<resources>
    <string name="app_name">BookStore</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Welcome Readers!</string>
    <string name="slide_1_desc">The easiest way to travel and get to your desired Destination!</string>
    <string name="slide_2_title">Live Google Maps</string>
    <string name="slide_2_desc">Books for everyone in any module or cause !</string>
    <string name="slide_3_title">Save time and book online</string>
    <string name="slide_3_desc">Our library its ooen seven days a week!</string>
    <string name="slide_4_title">Bookshop online</string>
    <string name="slide_4_desc">Bringing the library at your figure tips!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_maps">Map</string>

    <string name="Description">tttt</string>

    <!--LoginActivity and registration-->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Login">Login</string>
    <string name="password">Password</string>
    <string name="phone">Phone No</string>
    <string name="Name">Name</string>
    <string name="securityhint">Security Hint</string>
    <string name="forgetpassword">Forget Password!</string>
    <string name="entersecurityhint">Enter Your Security Hint Here</string>
    <string name="yourpassword">This Your Password</string>
    <string name="register">Register</string>
    <string name="getpassword">Get Password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="showpassword">Show Password</string>
    <string name="enterpassword">Enter Password</string>
    <string name="add">ADD</string>
    <string name="accountpassword">ACCOUNT PASSWORD</string>
    <string name="addphoto">Select Account Picture</string>
    <string name="delete">DELETE</string>
    <string name="accountname">Account Name</string>
    <string name="email">Email</string>





    <!-- added-->

    <string name="action_sign_in_short">Register</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
</resources>
